login/k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: login-destination
spec:
  host: login-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
